--- a/src/styles/auth-modal.module.css
+++ b/src/styles/auth-modal.module.css
@@ -32,7 +32,9 @@
 .form_container {
     display: flex;
     flex-direction: column;
-    gap: 7.2rem;
+    height: 100%;
+    min-height: 22.4rem;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -83,4 +85,12 @@
     height: 2.4rem;
     width: 2.4rem;
     cursor: pointer;
+}
+
+.error {
+    color: #ff0e0e;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.562rem;
+    text-align: center;
 }
