--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,12 @@ body {
     overflow: hidden;
     font-size: 1.6rem;
 }
+
+.hide_scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.hide_scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
