--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
     font-size: 1.6rem;
 }
 
