--- a/src/styles/home-page.module.css
+++ b/src/styles/home-page.module.css
@@ -13,3 +13,9 @@
     gap: 3.5rem;
     overflow-x: scroll;
 }
+
+.categories {
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+}
