--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,3 +34,22 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+.no_scroll {
+    overflow: hidden;
+}
+
+.slick-active a {
+    background: linear-gradient(to right, #d9d9d980 0%, #fff 100%);
+    background-size: 200% 100%;
+    animation: colorTransition 2s;
+}
+
+@keyframes colorTransition {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: -100% 0;
+    }
+}
