--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -1,12 +1,13 @@
 .modal_overlay {
-    height: 100vh;
-    width: 100vw;
+    display: block;
+    height: 100%;
+    width: 100%;
     background: #2f2f2fbf;
     z-index: 1;
     top: 0;
     left: 0;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
 }
 
 .modal_container {
