--- a/src/styles/story-card.module.css
+++ b/src/styles/story-card.module.css
@@ -1,4 +1,5 @@
 .story_card_container {
+    min-width: 25.7rem;
     max-width: 25.7rem;
     height: 45.9rem;
     position: relative;
@@ -14,6 +15,7 @@
     display: flex;
     flex-direction: column-reverse;
     flex-basis: 25%;
+    flex-shrink: 0;
     cursor: pointer;
     margin-bottom: 6rem;
 }
