--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -21,3 +21,37 @@
     flex-direction: row;
     gap: 1.7rem;
 }
+
+.logged_in_button_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.menu_icon {
+    width: 1.8rem;
+    height: 2.2rem;
+    margin-left: 3.2rem;
+}
+
+.add_story_btn {
+    height: 4.5rem;
+    width: 13.6rem;
+    margin-left: 3.7rem;
+}
+
+.bookmark_btn {
+    display: flex;
+    flex-direction: row;
+    gap: 0.4rem;
+    align-items: center;
+    height: 4.5rem;
+    min-width: 13.6rem;
+}
+
+.bookmark_icon {
+    display: flex;
+    flex-shrink: 0;
+    height: 2.4rem;
+    width: 1.9rem;
+}
